--- a/BuiMuiGaim/Views/Category/Index.cshtml
+++ b/BuiMuiGaim/Views/Category/Index.cshtml
@@ -2,10 +2,15 @@
 
 <div class="container p-3">
     <div class="row pt-4">
-        <h2 class="text-primary">Category List</h2>
-    </div>
-    <div class="col-6">
-        Create New Category
+        <div class="col-6">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+
+        <div class="col-6 text-right">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                Create New Category
+            </a>
+        </div>
     </div>
     <br />
     <br />
@@ -29,7 +34,16 @@
                     <tr>
                         <td width="50%">@obj.Name</td>
                         <td width="30%">@obj.DisplayOrder</td>
-                        <td></td>
+                        <td class="text-center">
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-route-Id="@obj.CategoryId" asp-action="Edit" class="btn btn-primary mx-2">
+                                    Edit
+                                </a>
+                                <a asp-controller="Category" asp-route-Id="@obj.CategoryId" asp-action="Delete" class="btn btn-danger mx-2">
+                                    Delete
+                                </a>
+                            </div>
+                        </td>
                     </tr>
                 }
                     </tbody>
