--- a/BuiMuiGaim/Views/Product/Upsert.cshtml
+++ b/BuiMuiGaim/Views/Product/Upsert.cshtml
@@ -42,7 +42,7 @@
                         <label asp-for="Product.Description"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Product.Description" class="form-control" />
+                        <textarea asp-for="Product.Description" class="form-control summernote"></textarea>
                         <span asp-validation-for="Product.Description" class="text-danger"></span>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="col-4">
-                @* Keep this empty *@
+                <img src="@WC.ImagePath@Model.Product.Image" width="100%" style="border-radius:5px; border:1px solid #bbb" />
             </div>
         </div>
     </div>
@@ -102,6 +102,10 @@
         <partial name="_ValidationScriptsPartial" />
         }
     <script>
+        $(document).ready(function () {
+            $('.summernote').summernote();
+            height:250
+        });
         function validateInput() {
             if (document.getElementById("uploadBox").value == "") {
                 Swal.fire(
