Added product Deleting

--- a/BuiMuiGaim/Views/Product/Upsert.cshtml
+++ b/BuiMuiGaim/Views/Product/Upsert.cshtml
@@ -91,7 +91,10 @@
                 </div>
             </div>
             <div class="col-4">
-                <img src="@WC.ImagePath@Model.Product.Image" width="100%" style="border-radius:5px; border:1px solid #bbb" />
+                @if(Model.Product.Id != 0)
+                { 
+                    <img src="@WC.ImagePath@Model.Product.Image" width="100%" style="border-radius:5px; border:1px solid #bbb" />
+                }
             </div>
         </div>
     </div>
