--- a/BuiMuiGaim/Views/Product/Delete.cshtml
+++ b/BuiMuiGaim/Views/Product/Delete.cshtml
@@ -25,7 +25,7 @@
                         <label asp-for="Price"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Price" disabled class="form-control" />                        
+                        <input asp-for="Price" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
@@ -42,7 +42,15 @@
                         <label asp-for="CategoryId"></label>
                     </div>
                     <div class="col-8">
-                            <input asp-for="Category.Name" disabled class="form-control" />
+                        <input asp-for="Category.Name" disabled class="form-control" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="ApplicationTypeId"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="ApplicationType.Name" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
