--- a/BuiMuiGaim/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BuiMuiGaim/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,21 +1,34 @@
 ﻿@page
 @model RegisterModel
-@{
-    ViewData["Title"] = "Register";
-}
-
-<h1>@ViewData["Title"]</h1>
-
+@if(User.IsInRole(BuiMuiGaim.WC.AdminRole))
+    {
+        <h1>Register an Admin Account</h1>
+    }
+    else
+    {
+        <h1>Register</h1>
+    }
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="Input.FullName"></label>
+                <input asp-for="Input.FullName" class="form-control" />
+                <span asp-validation-for="Input.FullName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
@@ -27,7 +40,14 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            @if (User.IsInRole(BuiMuiGaim.WC.AdminRole))
+            {
+                <button type="submit" class="btn btn-warning">Register Admin User</button>
+            }
+            else
+            {
+                <button type="submit" class="btn btn-primary">Register</button>
+            }
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
