--- a/BuiMuiGaim/Views/Cart/Summary.cshtml
+++ b/BuiMuiGaim/Views/Cart/Summary.cshtml
@@ -57,12 +57,14 @@
                                         <span class="text-info">Summary:</span>
                                     </h4>
                                     <ul class="list-group mb-3">
-                                        @foreach (var obj in Model.ProductList)
+                                        @for (int i = 0; i < Model.ProductList.Count; i++)
                                         {
+                                            <input type="hidden" asp-for="@Model.ProductList[i].Name" />
+                                            <input type="hidden" asp-for="@Model.ProductList[i].Id" />
                                             <li class="list-group-item d-flex justify-content-between">
                                                 <div>
-                                                    <h6 class="my-0">@obj.Name</h6>
-                                                    <small class="text-muted">Price: $ @obj.Price</small>
+                                                    <h6 class="my-0">@Model.ProductList[i].Name</h6>
+                                                    <small class="text-muted">Price: $ @Model.ProductList[i].Price</small>
                                                 </div>
                                             </li>
                                         }
