--- a/BuiMuiGaim/Views/Home/Details.cshtml
+++ b/BuiMuiGaim/Views/Home/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@model BuiMuiGaim.Models.ViewModels.DetailsVM
-
+@using BuiMuiGaim_Utility
 <div class="">
     <form method="post">
         <input asp-for="@Model.Product.Id" hidden />
