--- a/BuiMuiGaim/Views/Product/Delete.cshtml
+++ b/BuiMuiGaim/Views/Product/Delete.cshtml
@@ -1,8 +1,8 @@
 ﻿@model BuiMuiGaim.Models.Product
-
+@using BuiMuiGaim_Utility
 
 <form method="post">
-        <input asp-for="Id" hidden />
+    <input asp-for="Id" hidden />
 
     <div class="border p-3">
         <div class="form-group row">
@@ -84,7 +84,7 @@
         $(document).ready(function () {
             $('.summernote').summernote();
             height: 250
-            disable:true
-        });        
+            disable: true
+        });
     </script>
 }
