--- a/BuiMuiGaim/Views/Shared/_Layout.cshtml
+++ b/BuiMuiGaim/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
-@using BuiMuiGaim.Utility
+@using BuiMuiGaim_Utility
 
 <!DOCTYPE html>
 <html lang="en">
