Refactored Program. Made several Projects instead of one

--- a/BuiMuiGaim/Views/ApplicationType/Edit.cshtml
+++ b/BuiMuiGaim/Views/ApplicationType/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.ApplicationType
+﻿@model BuiMuiGaim_Models.ApplicationType
 
 <form method="post">
     <input asp-for="Id" hidden />
