--- a/BuiMuiGaim/Views/Cart/Summary.cshtml
+++ b/BuiMuiGaim/Views/Cart/Summary.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.ViewModels.ProductUserVM
+﻿@model BuiMuiGaim_Models.ViewModels.ProductUserVM
 
 <form method="post">
     <br />
