--- a/BuiMuiGaim/Views/Category/Delete.cshtml
+++ b/BuiMuiGaim/Views/Category/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.Category
+﻿@model BuiMuiGaim_Models.Category
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="CategoryId" hidden />
