--- a/BuiMuiGaim/Views/Home/Details.cshtml
+++ b/BuiMuiGaim/Views/Home/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.ViewModels.DetailsVM
+﻿@model BuiMuiGaim_Models.ViewModels.DetailsVM
 @using BuiMuiGaim_Utility
 <div class="">
     <form method="post">
