--- a/BuiMuiGaim/Views/Product/Upsert.cshtml
+++ b/BuiMuiGaim/Views/Product/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.ViewModels.ProductVM
+﻿@model BuiMuiGaim_Models.ViewModels.ProductVM
 @using BuiMuiGaim_Utility
 @{
     var title = "Create Product";
