--- a/BuiMuiGaim/Views/Shared/_IndividualProductCard.cshtml
+++ b/BuiMuiGaim/Views/Shared/_IndividualProductCard.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.Product
+﻿@model BuiMuiGaim_Models.Product
 @using BuiMuiGaim_Utility
 <div class="col-lg-4 col-md-6 pb-4 filter @Model.Category.Name.Replace(' ', '_')">
     <!-- Card-->
