--- a/BuiMuiGaim/Views/ApplicationType/Delete.cshtml
+++ b/BuiMuiGaim/Views/ApplicationType/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.ApplicationType
+﻿@model BuiMuiGaim_Models.ApplicationType
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="Id" hidden />
