--- a/BuiMuiGaim/Views/Category/Create.cshtml
+++ b/BuiMuiGaim/Views/Category/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model  BuiMuiGaim.Models.Category
+﻿@model  BuiMuiGaim_Models.Category
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
