--- a/BuiMuiGaim/Views/Category/Edit.cshtml
+++ b/BuiMuiGaim/Views/Category/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.Category
+﻿@model BuiMuiGaim_Models.Category
 
 <form method="post">
     <input asp-for="CategoryId" hidden />
