--- a/BuiMuiGaim/Views/Category/Index.cshtml
+++ b/BuiMuiGaim/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BuiMuiGaim.Models.Category>
+﻿@model IEnumerable<BuiMuiGaim_Models.Category>
 
 <div class="container p-3">
     <div class="row pt-4">
