--- a/BuiMuiGaim/Views/Home/Index.cshtml
+++ b/BuiMuiGaim/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BuiMuiGaim.Models.ViewModels.HomeVM
+﻿@model BuiMuiGaim_Models.ViewModels.HomeVM
 
 <div class="container">
     <div class="text-center">
