--- a/BuiMuiGaim/Views/Product/Index.cshtml
+++ b/BuiMuiGaim/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BuiMuiGaim.Models.Product>
+﻿@model IEnumerable<BuiMuiGaim_Models.Product>
 
 <div class="container p-3">
     <div class="row pt-4">
