--- a/BuiMuiGaim/Views/Category/Delete.cshtml
+++ b/BuiMuiGaim/Views/Category/Delete.cshtml
@@ -2,14 +2,14 @@
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="CategoryId" hidden />
-    <div class="border p-3">
+    <div class="border p-3 bg-white">
         <div class="form-group row">
             <h2 class="text-info" pl-3>Delete Category</h2>
         </div>
 
         <div class="row">
             <div class="col-8">
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Name"></label>
                     </div>
@@ -18,7 +18,7 @@
                     </div>
 
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="DisplayOrder"></label>
                     </div>
@@ -27,7 +27,7 @@
                     </div>
 
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
