--- a/BuiMuiGaim/Views/Category/Edit.cshtml
+++ b/BuiMuiGaim/Views/Category/Edit.cshtml
@@ -3,13 +3,13 @@
 <form method="post">
     <input asp-for="CategoryId" hidden />
     <div class="border p-3">
-        <div class="form-group row">
+        <div class="form-group p-3 bg-white">
             <h2 class="text-info" pl-3>Edit Category</h2>
         </div>
 
         <div class="row">
             <div class="col-8">
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Name"></label>
                     </div>
@@ -19,7 +19,7 @@
                     </div>
 
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="DisplayOrder"></label>
                     </div>
