--- a/BuiMuiGaim/Views/Product/Delete.cshtml
+++ b/BuiMuiGaim/Views/Product/Delete.cshtml
@@ -4,14 +4,14 @@
 <form method="post">
     <input asp-for="Id" hidden />
 
-    <div class="border p-3">
+    <div class="border p-3 bg-white">
         <div class="form-group row">
             <h2 class="text-info" pl-3>Delete Product</h2>
         </div>
 
         <div class="row">
             <div class="col-8">
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Name"></label>
                     </div>
@@ -20,7 +20,7 @@
                     </div>
 
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Price"></label>
                     </div>
@@ -28,7 +28,7 @@
                         <input asp-for="Price" disabled class="form-control" />
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Description"></label>
                     </div>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
 
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="CategoryId"></label>
                     </div>
@@ -45,7 +45,7 @@
                         <input asp-for="Category.Name" disabled class="form-control" />
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="ApplicationTypeId"></label>
                     </div>
@@ -53,7 +53,7 @@
                         <input asp-for="ApplicationType.Name" disabled class="form-control" />
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-8 offset-4 row">
                         <div class="col">
                             <button type="submit" class="btn btn-danger w-100">Delete</button>
