--- a/BuiMuiGaim/Views/Product/Upsert.cshtml
+++ b/BuiMuiGaim/Views/Product/Upsert.cshtml
@@ -11,14 +11,14 @@
         <input asp-for="Product.Id" hidden />
     }
 
-    <div class="border p-3">
+    <div class="border p-3 bg-white">
         <div class="form-group row">
             <h2 class="text-info" pl-3>@title</h2>
         </div>
 
         <div class="row">
             <div class="col-8">
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Product.Name"></label>
                     </div>
@@ -28,7 +28,7 @@
                     </div>
 
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Product.Price"></label>
                     </div>
@@ -37,7 +37,7 @@
                         <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Product.ShortDesc"></label>
                     </div>
@@ -46,7 +46,7 @@
                         <span asp-validation-for="Product.ShortDesc" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Product.Description"></label>
                     </div>
@@ -55,7 +55,7 @@
                         <span asp-validation-for="Product.Description" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         Image
                     </div>
@@ -63,29 +63,29 @@
                         <input type="file" name="files" id="uploadBox" multiple class="form-control" />
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Product.CategoryId"></label>
                     </div>
                     <div class="col-8">
-                        <select asp-for="Product.CategoryId" asp-items="@Model.CategorySelectList" class="form-control">
-                            <option disabled selected>--Select Category</option>
+                        <select asp-for="Product.CategoryId" asp-items="@Model.CategorySelectList" class="form-select">
+                            <option disabled selected>--Select Category--</option>
                         </select>
                         <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-4">
                         <label asp-for="Product.ApplicationTypeId"></label>
                     </div>
                     <div class="col-8">
-                        <select asp-for="Product.ApplicationTypeId" asp-items="@Model.ApplicationTypeSelectList" class="form-control">
-                            <option disabled selected>--Select Category</option>
+                        <select asp-for="Product.ApplicationTypeId" asp-items="@Model.ApplicationTypeSelectList" class="form-select">
+                            <option disabled selected>--Select Application Type--</option>
                         </select>
                         <span asp-validation-for="Product.ApplicationTypeId" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row py-2">
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
