--- a/BuiMuiGaim/Views/Category/Index.cshtml
+++ b/BuiMuiGaim/Views/Category/Index.cshtml
@@ -17,7 +17,7 @@
 
     @if(Model.Count() > 0)
             {
-                <table class="table table-bordered" table-stripped" style="width:100%">
+                <table class="table table-bordered table-stripped" style="width:100%">
                     <thead>
                         <tr>
                             <th>
