--- a/BuiMuiGaim/Views/Product/Index.cshtml
+++ b/BuiMuiGaim/Views/Product/Index.cshtml
@@ -17,7 +17,7 @@
 
     @if (Model.Count() > 0)
     {
-        <table class="table table-bordered" table-stripped" style="width:100%">
+        <table class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th>
@@ -35,27 +35,27 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var obj in Model)
-                {
-                <tr>
-                    <td width="30%">@obj.Name</td>
-                    <td width="10%">@obj.Price</td>
-                    <td width="20%">@obj.Category.Name</td>
-                    <td width="20%">@obj.ApplicationType.Name</td>
-                    <td class="text-center">
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-route-Id="@obj.Id" asp-action="Upsert" class="btn btn-primary mx-2">
-                                <i class="fas fa-edit"></i>
-                            </a>
-                            <a asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger mx-2">
-                                <i class="fas fa-trash-alt"></i>
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-                }
-            </tbody>
-        </table>
+        @foreach (var obj in Model)
+        {
+            <tr>
+                <td width="30%">@obj.Name</td>
+                <td width="10%">@obj.Price</td>
+                <td width="20%">@obj.Category.Name</td>
+                <td width="20%">@obj.ApplicationType.Name</td>
+                <td class="text-center">
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-route-Id="@obj.Id" asp-action="Upsert" class="btn btn-primary mx-2">
+                            <i class="fas fa-edit"></i>
+                        </a>
+                        <a asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger mx-2">
+                            <i class="fas fa-trash-alt"></i>
+                        </a>
+                    </div>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
     }
     else
     {
