--- a/BuiMuiGaim/Views/Product/Upsert.cshtml
+++ b/BuiMuiGaim/Views/Product/Upsert.cshtml
@@ -97,7 +97,7 @@
                             else
                             {
                                 //create
-                                <input type="submit" onclick="return validateInput()" class="btn btn-info w-100" value="Create" />
+                                <input type="submit" onclick="return validateInput()" class="btn btn-primary w-100" value="Create" />
                             }
                         </div>
                         <div class="col">
