--- a/BuiMuiGaim/Views/Shared/_Layout.cshtml
+++ b/BuiMuiGaim/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                <img src="~/images/tile.png" width="40%" />
-                    </a>
+                    <img src="~/images/tile.png" width="40%" />
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -85,10 +85,11 @@
     </header>
     <div class="container mb-4 pb-4">
         <main role="main" class="pb-3">
+            <partial name="_Notifications" />
             @RenderBody()
         </main>
     </div>
-   
+
     <footer class="border-top footer bg-dark">
         <div class="container text-white-50">
             &copy; 2021 - BuiMuiGaim - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
