--- a/BuiMuiGaim/Views/Cart/Index.cshtml
+++ b/BuiMuiGaim/Views/Cart/Index.cshtml
@@ -23,40 +23,71 @@
                                 <div class="row" style="color:#821f3d">
                                     <div class="col-lg-2">
                                     </div>
-                                    <div class="col-12 col-lg-7">
-                                        Product Details
+                                        <div class="col-12 col-lg-3">
+                                            Product Details
+                                        </div>
+
+                                    <div class="col-6 col-lg-2">
+                                        Price
                                     </div>
-                                    <div class="col-12 col-lg-2">
-                                        Price per sqft
-                                    </div>
+
+                                        <div class="col-6 col-lg-2">
+                                            Amount
+                                        </div>
+                                        <div class="col-6 col-lg-2">
+                                            Total Price
+                                        </div>
+                                    
                                     <div class="col-6 col-sm-4 col-lg-1">
                                     </div>
                                 </div>
                             </div>
 
                             <hr />
+                            @{ 
+                                var orderTotal = 0.0;
+                            }
                             @foreach (var product in Model)
                             {
-                                <div class="row h-100">
-                                    <div class="col-4 col-md-2 text-center py-2">
-                                        <img src="@WC.ImagePath@product.Image" class="rounded" width="100%" />
-                                    </div>
-                                    <div class="col-8 col-lg-7">
+                            <div class="row h-100">
+                                <div class="col-4 col-md-2 text-center py-2">
+                                    <img src="@WC.ImagePath@product.Image" class="rounded" width="100%" />
+                                </div>
+
+                                    <div class="col-8 col-lg-3">
                                         <h5>@product.Name</h5>
                                         <div style="font-size:11px;">@product.ShortDesc</div>
                                     </div>
-                                    <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
-                                        <span style="font-size:17px;"> $@product.Price</span>/ sqft
 
-                                    </div>
-                                    <div class="col-2 col-lg-1 p-0 pt-lg-4 text-center">
-                                        <a asp-action="Remove" asp-route-id="@product.Id"class="btn btn-outline-danger">
-                                            <i class="fas fa-trash"></i>
-                                        </a>
-                                    </div>
+
+                                <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                    <span style="font-size:17px;"> $@product.Price</span>
                                 </div>
-                                <hr />
+
+
+                                    <div class="col-4 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                        <input type="text" asp-for="@product.TempAmount" class="form-control" />
+                                    </div>
+                                    <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                        <span style="font-size:17px;"> $@(product.Price * product.TempAmount)</span>
+                                    </div>
+                            
+
+                                <div class="col-2 col-lg-1 p-0 pt-lg-4 text-center">
+                                    <a asp-action="Remove" asp-route-id="@product.Id" class="btn btn-outline-danger">
+                                        <i class="fas fa-trash"></i>
+                                    </a>
+                                </div>
+                            </div>
+                                orderTotal += product.Price * product.TempAmount;
+                              <hr />
                             }
+
+                            <div class="row">
+                                <div class="col-12 text-right pr-4" style="color:#821f3d">
+                                    OrderTotal : @string.Format("{0:c}", orderTotal);
+                                </div>
+                            </div>                             
                         </div>
                         <div class="card-footer">
                             <div class="row">
