--- a/BuiMuiGaim/Views/Product/Delete.cshtml
+++ b/BuiMuiGaim/Views/Product/Delete.cshtml
@@ -39,18 +39,18 @@
 
                 <div class="form-group row py-2">
                     <div class="col-4">
-                        <label asp-for="CategoryId"></label>
+                        <label asp-for="GenreId"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Category.Name" disabled class="form-control" />
+                        <input asp-for="Genre.Name" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row py-2">
                     <div class="col-4">
-                        <label asp-for="ApplicationTypeId"></label>
+                        <label asp-for="PublisherId"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="ApplicationType.Name" disabled class="form-control" />
+                        <input asp-for="Publisher.Name" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row py-2">
