--- a/BuiMuiGaim/Views/Shared/_Layout.cshtml
+++ b/BuiMuiGaim/Views/Shared/_Layout.cshtml
@@ -44,8 +44,8 @@
                                 </a>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="ApplicationType" asp-action="Index">ApplicationType</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Genre" asp-action="Index">Genre</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Publisher" asp-action="Index">Publisher</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Create Admin User</a>
