--- a/BuiMuiGaim/Views/Product/Upsert.cshtml
+++ b/BuiMuiGaim/Views/Product/Upsert.cshtml
@@ -65,24 +65,24 @@
                 </div>
                 <div class="form-group row py-2">
                     <div class="col-4">
-                        <label asp-for="Product.CategoryId"></label>
+                        <label asp-for="Product.GenreId"></label>
                     </div>
                     <div class="col-8">
-                        <select asp-for="Product.CategoryId" asp-items="@Model.CategorySelectList" class="form-select">
-                            <option disabled selected>--Select Category--</option>
+                        <select asp-for="Product.GenreId" asp-items="@Model.GenreSelectList" class="form-select">
+                            <option disabled selected>--Select Genre--</option>
                         </select>
-                        <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                        <span asp-validation-for="Product.GenreId" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row py-2">
                     <div class="col-4">
-                        <label asp-for="Product.ApplicationTypeId"></label>
+                        <label asp-for="Product.PublisherId"></label>
                     </div>
                     <div class="col-8">
-                        <select asp-for="Product.ApplicationTypeId" asp-items="@Model.ApplicationTypeSelectList" class="form-select">
+                        <select asp-for="Product.PublisherId" asp-items="@Model.PublisherSelectList" class="form-select">
                             <option disabled selected>--Select Application Type--</option>
                         </select>
-                        <span asp-validation-for="Product.ApplicationTypeId" class="text-danger"></span>
+                        <span asp-validation-for="Product.PublisherId" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row py-2">
