--- a/BuiMuiGaim/Views/Shared/_IndividualProductCard.cshtml
+++ b/BuiMuiGaim/Views/Shared/_IndividualProductCard.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BuiMuiGaim_Models.Product
 @using BuiMuiGaim_Utility
-<div class="col-lg-4 col-md-6 pb-4 filter @Model.Category.Name.Replace(' ', '_')">
+<div class="col-lg-4 col-md-6 pb-4 filter @Model.Genre.Name.Replace(' ', '_')">
     <!-- Card-->
     <div class="card bg-white rounded shadow-sm" style="border:1px solid #222">
         <div class="card-body px-3 pt-3 pb-1 row">
@@ -10,10 +10,10 @@
         <img class="card-img-top img-fluid d-block mx-auto mb-3" src="@WC.ImagePath@Model.Image" alt="Card image cap">
         <div class="card-body p-1 px-3 row">
             <div class="col-6">
-                <span class="badge p-2 border w-100 text-dark" style="background-color:lavenderblush">@Model.Category.Name</span>
+                <span class="badge p-2 border w-100 text-dark" style="background-color:lavenderblush">@Model.Genre.Name</span>
             </div>
             <div class="col-6 border-0">
-                <span class="badge p-2 border w-100" style="background-color:aliceblue">@Model.ApplicationType.Name</span>
+                <span class="badge p-2 border w-100" style="background-color:aliceblue">@Model.Publisher.Name</span>
             </div>
             <div class="col-12 pt-2" style="font-size:13px; text-align:justify">
                 <p> @Model.ShortDesc</p>
