--- a/BuiMuiGaim/Views/Product/Index.cshtml
+++ b/BuiMuiGaim/Views/Product/Index.cshtml
@@ -30,7 +30,7 @@
                         Genre
                     </th>
                     <th>
-                        Application Type
+                        Publisher
                     </th>
                 </tr>
             </thead>
