--- a/BuiMuiGaim/Views/Product/Upsert.cshtml
+++ b/BuiMuiGaim/Views/Product/Upsert.cshtml
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-8">
                         <select asp-for="Product.PublisherId" asp-items="@Model.PublisherSelectList" class="form-select">
-                            <option disabled selected>--Select Application Type--</option>
+                            <option disabled selected>--Select Publisher--</option>
                         </select>
                         <span asp-validation-for="Product.PublisherId" class="text-danger"></span>
                     </div>
