--- a/BuiMuiGaim/Views/Publisher/Index.cshtml
+++ b/BuiMuiGaim/Views/Publisher/Index.cshtml
@@ -3,12 +3,12 @@
 <div class="container p-3 bg-white">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Application Type List</h2>
+            <h2 class="text-primary">Publisher List</h2>
         </div>
 
         <div class="col-6 text-right">
             <a asp-action="Create" class="btn btn-primary">
-                Create New Application Type
+                Create New Publisher
             </a>
         </div>
     </div>
@@ -47,7 +47,7 @@
             }
     else
             {
-                <p>No Application type exists.</p>
+                <p>No Publisher exists.</p>
             }
 </div>
 
