--- a/BuiMuiGaim/Views/Publisher/Create.cshtml
+++ b/BuiMuiGaim/Views/Publisher/Create.cshtml
@@ -4,7 +4,7 @@
     <div class="border p-3 bg-white">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group row">
-            <h2 class="text-info" pl-3>Add Application Type</h2>
+            <h2 class="text-info" pl-3>Add Publisher</h2>
         </div>
 
         <div class="row">
