--- a/BuiMuiGaim/Views/Publisher/Delete.cshtml
+++ b/BuiMuiGaim/Views/Publisher/Delete.cshtml
@@ -4,7 +4,7 @@
     <input asp-for="Id" hidden />
     <div class="border p-3 bg-white">
         <div class="form-group row">
-            <h2 class="text-info" pl-3>Delete Application Type</h2>
+            <h2 class="text-info" pl-3>Delete Publisher</h2>
         </div>
 
         <div class="row">
