--- a/BuiMuiGaim/Views/Cart/InquiryConfirmation.cshtml
+++ b/BuiMuiGaim/Views/Cart/InquiryConfirmation.cshtml
@@ -1,5 +1,15 @@
-﻿<div class="text-center">
-    <h1 class="text-info">Inquiry Confirmation</h1>
-    <p>We have recieved your inquiry and someone from our team will contact you shortly!</p>
+﻿@model BuiMuiGaim_Models.OrderHeader
+
+<div class="text-center">
+    @if (Model != null)
+    {
+        <h1 class="text-info">Order Created</h1>
+        <p>Order @Model.Id has been created successfully!</p>
+    }
+    else
+    {
+        <h1 class="text-info">Inquiry Confirmation</h1>
+        <p>We have recieved your inquiry and someone from our team will contact you shortly!</p>
+    }
     <img src="/images/patio.jpg" width="80%" />
 </div>
