--- a/BuiMuiGaim/Views/Cart/Summary.cshtml
+++ b/BuiMuiGaim/Views/Cart/Summary.cshtml
@@ -62,6 +62,8 @@
                                         {
                                             <input type="hidden" asp-for="@Model.ProductList[i].Name" />
                                             <input type="hidden" asp-for="@Model.ProductList[i].Id" />
+                                            <input type="hidden" asp-for="@Model.ProductList[i].Price" />
+                                            <input type="hidden" asp-for="@Model.ProductList[i].TempAmount" />
                                             <li class="list-group-item d-flex justify-content-between">
                                                 <div>
                                                     <h6 class="my-0">@Model.ProductList[i].Name</h6>
