--- a/BuiMuiGaim/wwwroot/css/site.css
+++ b/BuiMuiGaim/wwwroot/css/site.css
@@ -76,7 +76,17 @@ body {
 
 
 
+.toast-success {
+    background-color: #13d878 !important;
+}
 
+.toast-warning {
+    background-color: #357e45 !important;
+}
+
+.toast-error {
+    background-color: #3533a7 !important;
+}
 
 
 .port-image {
